@@ -33,6 +33,8 @@
 * Adjust columnplot and gridplot positions for non-zero distance between the inplots.
 * Function Adjust() for Quality&4==0 now show image in widgets even if draw function is absent (i.e. =NULL).
 * Allow reading JPEG files for mglData::Import().
+* Add function for global cubic spline interpolation.
+
 
 * Rearrange tool buttons in UDAV
 * Add features for manual dashing and manual mask in Style dialog
